Fix z-index at aside and topbar in order to put topbar above sidebar

--- a/app/styles/components/dashboard/_aside.scss
+++ b/app/styles/components/dashboard/_aside.scss
@@ -10,4 +10,5 @@ aside{
     -moz-transition: -moz-transform .3s ease-in-out,width .3s ease-in-out;
     -o-transition: -o-transform .3s ease-in-out,width .3s ease-in-out;
     transition: transform .3s ease-in-out,width .3s ease-in-out;
+    z-index: 10;
 }
