--- a/app/styles/components/dashboard/_topbar.scss
+++ b/app/styles/components/dashboard/_topbar.scss
@@ -3,4 +3,5 @@ top-bar{
     min-height: 48px;
     display: block;
     background-color: yellow;
+    z-index: 20;
 }
